--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,19 @@ jobs:
         with:
           name: coverage-report
           path: coverage.xml
+      - name: Verify version matches tag (on tag builds)
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          echo "Git ref: $GITHUB_REF"
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+          FILE_VERSION=$(cat VERSION)
+          echo "Tag version: $TAG_VERSION"
+            echo "File version: $FILE_VERSION"
+          if [ "$TAG_VERSION" != "$FILE_VERSION" ]; then
+            echo "Version mismatch: tag v$TAG_VERSION vs file $FILE_VERSION" >&2
+            exit 1
+          fi
+          echo "Version OK"
 
   build-windows:
     name: Build (Windows exe)
