--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ PyInstaller>=6.0.0
 # =============================
 pytest>=8.2.0
 pylint>=3.2.0
+bump2version>=1.0.1
 
 # =============================
 # Standard Library
