build: add debug spec + pin dependencies; document Python 3.12 requirement (PySide6 wheel missing for 3.13)

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,21 @@
 # استخراج و برای تولید نهایی استفاده کرد. در این مرحله فقط حداقل نیازها را تعریف می‌کنیم.
 
 # رابط کاربری Qt (استفاده در view.py)
-PySide6>=6.6.0
+# توجه: در زمان نگارش (Sep 2025) هنوز Wheel رسمی برای Python 3.13 منتشر نشده؛
+# برای بیلد PyInstaller بدون دردسر از Python 3.11 یا 3.12 استفاده کن.
+# نسخه را پین می‌کنیم تا ناسازگاری‌های آینده در UI کنترل شود.
+PySide6==6.7.1
 
 # تاریخ شمسی (استفاده در model.py و view.py)
-jdatetime>=4.1.0
+jdatetime==5.2.0
 
 # =============================
 # (Optional) Build / Packaging Tools
 # =============================
 # اگر برای ساخت فایل اجرایی (exe) از PyInstaller استفاده می‌کنی، این را نگه دار.
 # در غیر این صورت می‌توانی حذفش کنی یا به بخش dev-requirements منتقل کنی.
-PyInstaller>=6.0.0
+# PyInstaller نسخه 6.6+ برای Python 3.12 پایدار است؛ برای 3.13 ممکن است وابستگی‌ها آماده نباشند.
+PyInstaller==6.6.0
 
 # =============================
 # Development / Testing
